chore(ci): add update flake job, clean up dependencies

--- a/.github/workflows/update-flake.yml
+++ b/.github/workflows/update-flake.yml
@@ -1,7 +1,9 @@
-name: Build
+name: Job - Update Flake
 
 on:
-  push:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * SUN" # Every sunday at midnight
 
 jobs:
   build:
@@ -18,4 +20,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@v4
       - uses: DeterminateSystems/magic-nix-cache-action@main
+      - run: nix flake update
       - run: nix build
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "chore: update flake"
