fix(ci): add write permissions to the update flake job

--- a/.github/workflows/update-flake.yml
+++ b/.github/workflows/update-flake.yml
@@ -16,6 +16,8 @@ jobs:
             arch: aarch64-darwin
     name: "Build ${{ matrix.items.arch }}"
     runs-on: ${{ matrix.items.os }}
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@v4
