--- a/.github/workflows/update-flake.yml
+++ b/.github/workflows/update-flake.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/flakehub-cache-action@main
       - run: nix flake update
-      - run: nix build
+      - run: nix run .# -- --headless -c "q" 2>&1 | grep "Error detected while" || exit 0
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore: update flake"
