--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,4 +19,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/flakehub-cache-action@main
+      - run: nix flake check
       - run: nix run .# -- --headless -c "q" 2>&1 | grep "Error detected while" || exit 0
